# Algoritmia-I

./: README.md
Arboles/: CMakeLists.txt  Funca.cpp  main.cpp
Arboles/Archivos/: CLAVE1.TXT  IMPUT.TXT  PEDIDOS.TXT  PLAYAS.TXT
Arboles/Ejemplos/: Ejemplo1.0.cpp  Ejemplo3.0.C1.1.cpp  Ejemplo3.0.C1.2.cpp  Ejemplo3.0.cpp  Ejemplo4.0.cpp
Arboles/Seminario/: Slot1.0.cpp  Slot4.0.cpp  Slot6.0.cpp  Slot6.F.cpp
Arboles/Z.Final/: 2025.I.P2.cpp  2025.I.P3.1.cpp  EF_242_P1.cpp  EF_251_P2.cpp  EF_251_P3.cpp  mogollon-sebastian-ef-p1.cpp  mogollon-sebastian-ef-p2.cpp  mogollon-sebastian-ef-p3.cpp
Cadenas/: CMakeLists.txt  slot1.1.cpp  slot2.0.cpp  slot2.1.cpp  slot3.0.cpp
Cadenas/Cajitas/: cajita1.0.cpp  cajita1.1.cpp  cajita2.0.cpp  cajita3.0.cpp  cajita4.0.cpp  cajita4.1.cpp  cajita4.2.cpp
Funciones/: CMakeLists.txt  main.cpp  main20.cpp  main21.cpp  main22.cpp  slot1.cpp  slot10.1.cpp  slot10.2.cpp  slot10.cpp  slot11.cpp  slot12.cpp  slot2.cpp  slot3.cpp  slot4.cpp  slot5.cpp  slot6.cpp  slot7.cpp  slot8.1.cpp  slot8.2.cpp  slot8.cpp
Funciones/Seminario/: ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  struct1.0.cpp  struct1.1.cpp  struct1.2.cpp
Punteros/: CMakeLists.txt  main.cpp  slot1.0.cpp
Punteros/APC3/: 2025.1.pc4.p2.cpp  2025.1.pc4.p3.cpp  mogollon-sebastian-pc4-p1.cpp  mogollon-sebastian-pc4-p2.cpp  mogollon-sebastian-pc4-p3.cpp
Punteros/Caja/: ENCUESTA.txt  NOTAS.8.txt  PEDIDOS.txt  PROMEDIOS.txt  PROMEDIOS1.txt
Punteros/Cajita/: Base1.1.cpp  Base1.2.cpp  Base1.3.cpp  Base2.0.cpp  Base2.1.cpp  Base2.2.cpp  Base3.0.cpp  Base4.0.cpp  Base4.1.cpp  Base5.0.cpp  Base6.0.cpp  Base7.0.cpp  Base8.0.cpp  Tarea2.0.cpp
Punteros/CajitaNestor/: CajitaN1.0.cpp  CajitaN1.1.cpp  CajitaN1.2.cpp  CajitaN2.0.cpp  CajitaN2.1.cpp  CajitaN3.0.cpp  CajitaN3.1.cpp  CajitaN4.0.cpp  CajitaN4.1.cpp  CajitaN4.2.cpp  CajitaN4.3.cpp  CajitaN5.0.cpp  CajitaN5.1.cpp  CajitaN5.2.cpp  CajitaN6.0.cpp  CajitaN7.0.cpp  CajitaN8.0.cpp  RecursivaN2.0.cpp
Punteros/CajitaSotelo/: CajitaS1.1.cpp  CajitaS2.0.cpp
Punteros/InsertarEliminaS/: Caso0.0.cpp  Caso0.1.cpp  Caso1.1.cpp  Caso3.0.cpp  Caso4.0.cpp  Ejemplo1.0.cpp  Ejemplo3.0.cpp  Ejemplo4.0.cpp
Punteros1.1/: CMakeLists.txt
Punteros1.1/Archivos/: CURSOS1.0.txt  DATOS1.0.txt  LISTADO1.0.txt
Punteros1.1/Seminario/: Ejemplo2.0.cpp  Ejemplo5.0.cpp  Ejemplo6.0.cpp  Ejemplo6.R1.cpp  Ejemplo6.R2.cpp
Recursividad/: CMakeLists.txt  main.cpp  slot1.0.cpp  slot1.1.cpp  slot10.0.cpp  slot2.0.cpp  slot2.1.cpp  slot2.2.cpp  slot3.0.cpp  slot4.0.cpp  slot5.0.cpp  slot6.0.cpp  slot7.0.cpp  slot8.0.cpp  slot8.1.cpp  slot9.0.cpp
Susti/: CMakeLists.txt
Susti/Archivos/: Busqueda1.0.cpp  DOT_Lect_Ind.cpp  Lectura2TXT.cpp  Polinomio.cpp
Susti/Ejemplos/: Ejemplo2.0.cpp  Ejemplo3.0.C1.2.cpp  Ejemplo4.1.cpp
Susti/Indicio/: 2025.I.P1.1.cpp  2025.I.P2.1.cpp  2025.I.P2.cpp  2025.I.P3.2.cpp  2025.I.P3.cpp  EF_251_P1.cpp  EF_251_P2.cpp  mogollon-sebastian-ef-p2.cpp
