cmake_minimum_required(VERSION 4.0)
project(Arboles)

set(CMAKE_CXX_STANDARD 20)

add_executable(Funca Funca.cpp)
add_executable(Ejemplo1.0 Ejemplos/Ejemplo1.0.cpp)
add_executable(Ejemplo2.0 Ejemplos/Ejemplo2.0.cpp)
add_executable(Ejemplo3.0 Ejemplos/Ejemplo3.0.cpp)
add_executable(Ejemplo3.0.C1.1 Ejemplos/Ejemplo3.0.C1.1.cpp)
add_executable(Ejemplo3.0.C1.2 Ejemplos/Ejemplo3.0.C1.2.cpp)
add_executable(Ejemplo4.0 Ejemplos/Ejemplo4.0.cpp)
add_executable(Ejemplo4.1 Ejemplos/Ejemplo4.1.cpp)

add_executable(Slot1.0 Seminario/Slot1.0.cpp)
add_executable(Slot2.0 Seminario/Slot2.0.cpp)
add_executable(Slot3.0 Seminario/Slot3.0.cpp)
add_executable(Slot4.0 Seminario/Slot4.0.cpp)
add_executable(slot5.0 Seminario/Slot5.0.cpp)
add_executable(Slot6.0 Seminario/Slot6.0.cpp)
add_executable(Slot6.F Seminario/Slot6.F.cpp)
add_executable(Slot6.I Seminario/Slot6.I.cpp)
add_executable(Slot6.R1 Seminario/Slot6.R1.cpp)
add_executable(Slot6.R2 Seminario/Slot6.R2.cpp)

add_executable(2025.I.P1 Z.Final/2025.I.P1.cpp)
add_executable(2025.I.P1.1 Z.Final/2025.I.P1.1.cpp)
add_executable(p1 Z.Final/mogollon-sebastian-ef-p1.cpp)
add_executable(p2 Z.Final/mogollon-sebastian-ef-p2.cpp)
add_executable(p3 Z.Final/mogollon-sebastian-ef-p3.cpp)

add_executable(2025.I.P2 Z.Final/2025.I.P2.cpp)

add_executable(EF_242_P1 Z.Final/EF_242_P1.cpp)
add_executable(EF_251_P1 Z.Final/EF_251_P1.cpp)
add_executable(EF_251_P2 Z.Final/EF_251_P2.cpp)
add_executable(EF_251_P3 Z.Final/EF_251_P3.cpp)