cmake_minimum_required(VERSION 4.0)
project(Funciones)

set(CMAKE_CXX_STANDARD 20)

add_executable(main main.cpp)
add_executable(slot1 slot1.cpp)
add_executable(slot2 slot2.cpp)
add_executable(slot3 slot3.cpp)
add_executable(slot4 slot4.cpp)
add_executable(slot5 slot5.cpp)
add_executable(slot6 slot6.cpp)
add_executable(slot7 slot7.cpp)
add_executable(slot8 slot8.cpp)
add_executable(slot8.1 slot8.1.cpp)
add_executable(slot8.2 slot8.2.cpp)
add_executable(slot9 slot9.cpp)
add_executable(slot10 slot10.cpp)
add_executable(slot10.1 slot10.1.cpp)
add_executable(slot10.2 slot10.2.cpp)
add_executable(slot11 slot11.cpp)
add_executable(slot12 slot12.cpp)
add_executable(ejercicio1 Seminario/ejercicio1.cpp)
add_executable(ejercicio2 Seminario/ejercicio2.cpp)
add_executable(ejercicio3 Seminario/ejercicio3.cpp)
add_executable(ejercicio4 Seminario/ejercicio4.cpp)
add_executable(struct1.0 Seminario/struct1.0.cpp)
add_executable(struct1.1 Seminario/struct1.1.cpp)
add_executable(struct1.2 Seminario/struct1.2.cpp)

add_executable(main20 main20.cpp)
add_executable(main21 main21.cpp)
add_executable(main22 main22.cpp)

