cmake_minimum_required(VERSION 4.0)
project(Punteros)

set(CMAKE_CXX_STANDARD 20)

add_executable(main main.cpp)
add_executable(slot1.0 slot1.0.cpp)
add_executable(CajitasN1.0 CajitaNestor/CajitaN1.0.cpp)
add_executable(CajitasN1.1 CajitaNestor/CajitaN1.1.cpp)
add_executable(CajitasN1.2 CajitaNestor/CajitaN1.2.cpp)
add_executable(CajitasN2.0 CajitaNestor/CajitaN2.0.cpp)
add_executable(CajitasN2.1 CajitaNestor/CajitaN2.1.cpp)
add_executable(CajitasN3.0 CajitaNestor/CajitaN3.0.cpp)
add_executable(CajitasN3.1 CajitaNestor/CajitaN3.1.cpp)

add_executable(CajitaS1.0 CajitaSotelo/CajitaS1.0.cpp)
add_executable(CajitaS1.1 CajitaSotelo/CajitaS1.1.cpp)
add_executable(CajitaS2.0 CajitaSotelo/CajitaS2.0.cpp)