cmake_minimum_required(VERSION 4.0)
project(Punteros)

set(CMAKE_CXX_STANDARD 20)

add_executable(main main.cpp)
add_executable(slot1.0 slot1.0.cpp)

add_executable(Base1.0 Cajita/Base1.0.cpp)
add_executable(Base1.1 Cajita/Base1.1.cpp)
add_executable(Base1.2 Cajita/Base1.2.cpp)
add_executable(Base1.3 Cajita/Base1.3.cpp)
add_executable(Base2.0 Cajita/Base2.0.cpp)
add_executable(Base2.1 Cajita/Base2.1.cpp)
add_executable(Base2.2 Cajita/Base2.2.cpp)
add_executable(Base3.0 Cajita/Base3.0.cpp)
add_executable(Base4.0 Cajita/Base4.0.cpp)
add_executable(Base4.1 Cajita/Base4.1.cpp)
add_executable(Base5.0 Cajita/Base5.0.cpp)

add_executable(CajitasN1.0 CajitaNestor/CajitaN1.0.cpp)
add_executable(CajitasN1.1 CajitaNestor/CajitaN1.1.cpp)
add_executable(CajitasN1.2 CajitaNestor/CajitaN1.2.cpp)
add_executable(CajitasN2.0 CajitaNestor/CajitaN2.0.cpp)
add_executable(CajitasN2.1 CajitaNestor/CajitaN2.1.cpp)
add_executable(CajitasN3.0 CajitaNestor/CajitaN3.0.cpp)
add_executable(CajitasN3.1 CajitaNestor/CajitaN3.1.cpp)
add_executable(CajitasN4.0 CajitaNestor/CajitaN4.0.cpp)
add_executable(CajitasN4.1 CajitaNestor/CajitaN4.1.cpp)
add_executable(CajitasN4.2 CajitaNestor/CajitaN4.2.cpp)
add_executable(CajitasN4.3 CajitaNestor/CajitaN4.3.cpp)
add_executable(CajitasN5.0 CajitaNestor/CajitaN5.0.cpp)
add_executable(CajitasN5.1 CajitaNestor/CajitaN5.1.cpp)
add_executable(CajitasN5.2 CajitaNestor/CajitaN5.2.cpp)
add_executable(CajitasN6.0 CajitaNestor/CajitaN6.0.cpp)
add_executable(CajitasN7.0 CajitaNestor/CajitaN7.0.cpp)
add_executable(RecursivaN1.0.cpp CajitaNestor/RecursivaN1.0.cpp)
add_executable(RecursivaN2.0.cpp CajitaNestor/RecursivaN2.0.cpp)


add_executable(CajitaS1.0 CajitaSotelo/CajitaS1.0.cpp)
add_executable(CajitaS1.1 CajitaSotelo/CajitaS1.1.cpp)
add_executable(CajitaS2.0 CajitaSotelo/CajitaS2.0.cpp)
