cmake_minimum_required(VERSION 4.0)
project(Punteros1_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(main main.cpp)
add_executable(Ejemplo1.0 Seminario/Ejemplo1.0.cpp)
add_executable(Ejemplo2.0 Seminario/Ejemplo2.0.cpp)
add_executable(Ejemplo3.0 Seminario/Ejemplo3.0.cpp)
add_executable(Ejemplo4.0 Seminario/Ejemplo4.0.cpp)
add_executable(Ejemplo5.0 Seminario/Ejemplo5.0.cpp)
add_executable(Ejemplo6.0 Seminario/Ejemplo6.0.cpp)
add_executable(Ejemplo6.F Seminario/Ejemplo6.F.cpp)
add_executable(Ejemplo6.R1 Seminario/Ejemplo6.R1.cpp)
add_executable(Ejemplo6.R2 Seminario/Ejemplo6.R2.cpp)
add_executable(Ejemplo6.I Seminario/Ejemplo6.I.cpp)