cmake_minimum_required(VERSION 4.0)
project(Recursividad)

set(CMAKE_CXX_STANDARD 20)

add_executable(main main.cpp)
add_executable(slot1.0 slot1.0.cpp)
add_executable(slot1.1 slot1.1.cpp)
add_executable(slot2.0 slot2.0.cpp)
add_executable(slot2.1 slot2.1.cpp)
add_executable(slot2.2 slot2.2.cpp)
add_executable(slot3.0 slot3.0.cpp)
add_executable(slot4.0 slot4.0.cpp)
add_executable(slot5.0 slot5.0.cpp)
add_executable(slot6.0 slot6.0.cpp)
add_executable(slot7.0 slot7.0.cpp)
add_executable(slot8.0 slot8.0.cpp)
add_executable(slot8.1 slot8.1.cpp)
add_executable(slot9.0 slot9.0.cpp)
add_executable(slot10.0 slot10.0.cpp)